<resources>
    <string name="app_name">FoodiesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tab_home">Home</string>
    <string name="title_tab_cart">My Cart</string>
    <string name="title_tab_profile">My Profile</string>
    <string name="greetings">Good Morning, Cella</string>
    <string name="greetings2">what do you want to eat today?</string>
    <string name="name_greeting">Good Morning, Cella!</string>
    <string name="greeting">What do you want to eat today?</string>
    <string name="search_bar_promotion">buy 1 food get free drink</string>
    <string name="text_menu_banner">Our Favourite Menu</string>
    <string name="text_discount_banner">Buy now discount up to 30%</string>
    <string name="text_btn_banner">Order Now</string>
    <string name="text_banner_menu">FOODS AND DRINKS</string>
    <string name="tv_menu">Today\'s Popular Menu</string>
    <string name="tv_rupiah">Rp.</string>
    <string name="tv_location">LOCATION</string>
    <string name="text_my_profile">MY PROFILE</string>
    <string name="text_username">USERNAME</string>
    <string name="text_enter_username">Enter Username</string>
    <string name="text_password">PASSWORD</string>
    <string name="text_enter_password">Enter Password</string>
    <string name="text_email">EMAIL</string>
    <string name="text_enter_email">Enter Email</string>
    <string name="text_no_telp">NO. TELP</string>
    <string name="text_enter_number_phone">Enter Number Phone</string>
    <string name="hint_username">USERNAME</string>
    <string name="text_et_username">Marcella Andriani Mahadewi</string>
    <string name="hint_password">PASSWORD</string>
    <string name="text_et_password">jajanterus</string>
    <string name="hint_email">EMAIL</string>
    <string name="text_et_email">marcellaandr22@gmail,com</string>
    <string name="hint_number_phone">NUMBER PHONE</string>
    <string name="text_et_number_phone">0812345678910</string>
    <string name="text_add_to_cart_success">Add to cart Success</string>
    <string name="text_add_to_cart_failed">Add to cart Failed</string>
    <string name="ltext_oading">Loading</string>
    <string name="text_loading">Loading</string>
    <string name="text_hint_notes">Notes</string>
    <string name="total_quantity">x%s</string>
    <string name="text_cart_is_empty">Cart is Empty</string>
    <string name="text_checkout_your_cart">CHECKOUT YOUR CART</string>
    <string name="text_total_price">Total Price</string>
    <string name="text_checkout">Checkout</string>
    <string name="text_dialog">Terimakasih, Pesanan sedang di proses</string>
    <string name="text_tutup">Tutup</string>
    <string name="text_keranjang_belanja">KERANJANG BELANJA</string>
    <string name="text_total_belanja">Total Belanja</string>
    <string name="text_checkout_btn">Checkout</string>
    <string name="text_choose_delivery_method">CHOOSE DELIVERY METHOD</string>
    <string name="text_pick_up_in_store">PICK UP IN STORE</string>
    <string name="text_delivery">DELIVERY</string>
    <string name="text_choose_payment_method">CHOOSE PAYMENT METHOD</string>
    <string name="text_cash">CASH</string>
    <string name="text_e_wallet">E-WALLET</string>
    <string name="text_rincian_pembayaran">RINCIAN PEMBAYARAN</string>
    <string name="text_terimakasih_pesananmu_sedang_diproses">Terimakasih! Pesananmu Sedang Diproses...</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_password_does_not_match">Password does not match</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 characters</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="title_email_input_profile">Email</string>
    <string name="email_hint">Input Your Email</string>
    <string name="title_password_input_profile">Password</string>
    <string name="password_hint">Input Your Password</string>
    <string name="text_highlight_register_here">Register Here</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="toast_error">Tolong masukkan data yang benar</string>
    <string name="text_login_here">LOGIN HERE</string>
    <string name="text_nav_to_register">Not Register Yet? Register Here</string>
    <string name="text_btn_login">LOGIN</string>
    <string name="text_tittle_username">Username</string>
    <string name="text_input_username">Input Username</string>
    <string name="text_title_email">Email</string>
    <string name="text_input_email">Input Email</string>
    <string name="text_title_password">Password</string>
    <string name="text_input_password">Input Password</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_input_number_phone">Input Number Phone</string>
    <string name="text_register_your_account">REGISTER YOUR ACCOUNT</string>
    <string name="text_btn_register">Register</string>
    <string name="text_already_have_an_account_login_here">Already have an account? Login Here</string>
    <string name="text_btn_logout">Logout</string>
    <string name="error_checkout">Pemesanan Gagal</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="text_change_password">Change Password</string>
    <string name="text_greetings">Hi, Welcome!</string>
    <string name="text_search_bar">Buy now for special price</string>
    <string name="text_add_to_cart">Masukkan ke Keranjang</string>
    <string name="text_tambahkan_ke_keranjang">Tambahkan ke Keranjang - %1$s</string>
    <string name="message_request_change_password">Change password request sent to your email Please check to your inbox or spam</string>
    <string name="tv_data_not_found">Category Not Found</string>
    <string name="tv_menu_not_found">Menu Not Found</string>
    <string name="text_name">Hi, %1$s</string>

</resources>