<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="8dp">

    <ImageView
        android:id="@+id/iv_notification"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/ic_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_profile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/img_person"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/text_greetings"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/font_raleway_semi_bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_profile"/>

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginStart="16dp"
        android:text="@string/greeting"
        android:textSize="14sp"
        android:fontFamily="@font/font_raleway_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <com.google.android.material.search.SearchBar
        android:id="@+id/sb_home"
        android:layout_width="0dp"
        android:backgroundTint="@color/md_theme_light_secondaryContainer"
        android:layout_height="wrap_content"
        android:hint="@string/text_search_bar"
        android:paddingHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting"/>

</androidx.constraintlayout.widget.ConstraintLayout>