<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_action_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="8dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/yellow_background">
        <TextView
            android:id="@+id/tv_title_toolbar"
            style="@style/TextAppearance.Material3.TitleMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:textAlignment="center"
            android:text="@string/text_checkout_your_cart"
            android:fontFamily="@font/font_raleway_bold"
            android:textStyle="bold"
            android:textColor="@color/orange" />
    </LinearLayout>

    <include
        android:id="@+id/layout_content"
        layout="@layout/layout_content_order"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/cv_section_order"
        app:layout_constraintTop_toBottomOf="@+id/ll_action_bar" />

    <include
        android:id="@+id/layout_state"
        layout="@layout/layout_content_state"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_section_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:background="@color/yellow_background">

            <TextView
                android:id="@+id/tv_label_total_price"
                style="@style/TextAppearance.Material3.LabelSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/text_total_price"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/btn_checkout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_total_price"
                android:fontFamily="@font/font_raleway_bold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:ellipsize="end"
                android:maxLines="1"
                app:layout_constraintEnd_toStartOf="@id/btn_checkout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_label_total_price"
                tools:text="RP. 50.0000" />

            <Button
                android:id="@+id/btn_checkout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/text_checkout"
                android:textColor="@color/orange"
                android:fontFamily="@font/font_raleway_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>